chore(config): add db config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=InstagramClone
+
+# DB Config
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/{YourDbName}?lobytea_compat=true
+spring.datasource.username=postgres
+spring.datasource.password={DbPass}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
